# hv-server-precise

./: .gitignore  Pipfile  README.md  commands.schema.json  config.py  db.py  gun-gui.py  hardware_manager.py  hardware_manager_virtual.py  hv-server.py  hv_manager.py  hv_server.py  manager.py  pyproject.toml  requirements.txt  start.ps1
.devcontainer/: devcontainer.json
calibration/: calc_coeff.py  gather.py  plot.py
calibration-data/23.09.2022/: voltage.csv  voltage_sets.csv
calibration-data/26.09.2022/: voltage.csv  voltage_sets.csv
calibration-data/27.09.2022/: voltage.csv  voltage_sets.csv
calibration-data/29.11.2022/: voltage.csv  voltage_sets.csv
client/: package-lock.json  package.json  vite.config.js
client/.devcontainer/: devcontainer.json
client/src/: App.vue  main.js
client/src/stores/: socket.js
docs/: API.md  PREPRINT.md
mics/: server.py  zmq_test.py
static/: index.html
static/assets/: index.1287d7f7.css  index.b280cfe1.js
utils/: cli.py  hub.py  logger.py  manager.py  scale.py
utils/transport/: socket.py  websocket.py
utils/transport/static/: index.html
utils/transport/static/assets/: index.30e22627.css  index.81c2a2fc.js
